Update dependencies
- use new kotlin features
- fix ktlint